CEO Align Fixed | FAQ Font Size Fixed And Img Size Fixed | Footer Added Link Not Added.

--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -1,59 +1,73 @@
 @media (max-width: 575.98px) {
-    *{
-        margin: 0;
-        padding: 0;
-    }
-    .faqstart{
-        /* -webkit-box-shadow: -4px 2px 34px -18px rgba(0,34,255,1);
+  * {
+    margin: 0;
+    padding: 0;
+  }
+
+  .faqstart {
+    /* -webkit-box-shadow: -4px 2px 34px -18px rgba(0,34,255,1);
     -moz-box-shadow: -4px 2px 34px -18px rgba(0,34,255,1);
     box-shadow: -4px 2px 34px -18px rgba(0,34,255,1); */
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+
     padding: 8px;
     margin-top: 30px;
-    }
-     .faqstart>h1{
-        font-size: 24px;
-        padding: 10px;
-        text-align: center;
-    }
-    .faqstart>p{
-        font-size: 20px;
-        text-align: center;
-        padding: 7px;
-    
-    }
-    .faq{
-            cursor: pointer;
-            border:1px solid coral;
-            padding: 10px;
-            margin: 15px;
-            margin-bottom: 10px;
-            
-        }
-        .question>h2{
-            font-weight: 500;
-            font-size: 15px;
-            padding: 8px;
-            /* margin-bottom: 30px; */
-         } 
-        .answer>h3{
-            text-indent: 50px;
-            font-size: 15px;
-            text-align: justify;
-            line-height: 23px;
-        }
-    .question{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    
-    
-    
-    /* contact us */
-    
-  .contactdiv{
+  }
+
+  .faqstart>h1 {
+    font-size: 24px;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .faqstart>p {
+    font-size: 20px;
+    text-align: center;
+    padding: 7px;
+
+  }
+
+  .faq {
+    cursor: pointer;
+    border: 1px solid coral;
+    padding: 10px;
+    margin: 15px;
+    margin-bottom: 10px;
+
+  }
+
+  /* changed by devsk */
+  .question>h2 {
+    font-weight: 500;
+    font-size: .99em !important;
+    padding: 8px;
+    /* margin-bottom: 30px; */
+  }
+
+  /* added by devsk */
+  .question>img {
+    width: 1.8em !important;
+    margin-bottom: 0 !important;
+  }
+
+  .answer>h3 {
+    text-indent: 50px;
+    font-size: 15px;
+    text-align: justify;
+    line-height: 23px;
+  }
+
+  .question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+
+
+  /* contact us */
+
+  .contactdiv {
     background-color: rgb(239, 230, 247);
     width: 100%;
     overflow: hidden;
@@ -61,108 +75,125 @@
     margin: 0 auto;
     margin-top: 30px;
   }
-  .contactdiv>h2{
+
+  .contactdiv>h2 {
     text-align: center;
     margin-top: 10px;
     font-size: 20px;
   }
-  .contactdiv>h5{
+
+  .contactdiv>h5 {
     text-align: center;
     font-size: 17px;
   }
-  form{
-   margin: 10px;
-   background-color: rgb(255, 255, 255);
-   padding: 20px;
-   border-radius: 5px;
 
-   position: relative;
+  form {
+    margin: 10px;
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 5px;
+
+    position: relative;
   }
-  .input-data input,.submit-btn input{
+
+  .input-data input,
+  .submit-btn input {
     width: 90%;
     overflow: hidden;
     background-color: rgb(239, 230, 247);
     border: thin;
     height: 45px;
   }
-  .input-data textarea{
+
+  .input-data textarea {
     overflow: hidden;
     background-color: rgb(239, 230, 247);
     border: thin;
+    width: 100%;
   }
-  .input-data label{
+
+  .input-data label {
     margin-bottom: 5px;
   }
-  .submit-btn input{
+
+  .submit-btn input {
     width: 130px;
     position: relative;
     left: 65%;
 
   }
 
-  .social-media{
+  .social-media {
     width: 95%;
     margin: 0 auto;
   }
-  .social-media a{
+
+  .social-media a {
     font-size: 20px;
     text-decoration: none;
     color: black;
   }
-  .social-media .don{
-    position:relative;
-    top:8px;
+
+  .social-media .don {
+    position: relative;
+    top: 8px;
     left: 5px;
   }
-  .social-media .address{
-    border: .1px solid none;
-    /* position: relative;
-    left: 30%; */
-    height: 60px;
-    margin-bottom: 5px;
-  }
-  .social-media .address svg{
-    font-size:30px;
-    position: relative;
-    top: 7px;
-  }
-  .social-media .call{
-    border: .1px solid none;
-    /* position: relative;
-    left: 30%; */
-    height: 60px;
-    margin-bottom: 5px;
 
-  }
-  .social-media .call svg{
-    font-size:30px;
-    position: relative;
-    top: 7px;
-  }
-  .social-media .email{
-    border: .1px solid none;
+  .social-media > .address, .call , .email {
+   margin: .7em;
+   display: flex;
+   justify-content: center;
+   color: white !important;
+   font-weight: bold !important;
     /* position: relative;
     left: 30%; */
-    height: 60px;
-    margin-bottom: 5px;
-
+   
   }
-  .social-media .email svg{
-    font-size:30px;
+
+  .social-media .address svg {
+    font-size: 30px;
     position: relative;
     top: 7px;
-  } 
-  .icon{
-    margin-top: 10px;
-    gap: 16px;
+  }
+
+.footer{
+  background: rgb(8, 8, 70);
+  color: white;
+}
+
+  .social-media .call svg {
+    font-size: 30px;
+    position: relative;
+    top: 7px;
+  }
+
+
+  .social-media .email svg {
+    font-size: 30px;
+    position: relative;
+    top: 7px;
+  }
+
+  .icon {
+    gap: 1em;
     display: flex;
-    align-content: space-between;
     font-size: 20px;
-    position: relative;
-    left: 40%;
     transition: all 0.4s ease;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .copyright{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bolder;
+  }
+  .copyright > span > a{
+    text-decoration: none;
+    color: white;
   }
 
 
 }
-
